Source/WebCore/Modules/streams/ReadableStream.h
@@ -58,9 +58,12 @@ public:
     virtual ~ReadableStream();
 
     ReadableStreamReader* reader() { return m_reader; }
-    void lock(ReadableStreamReader& reader) { m_reader = &reader; }
-    void release() { m_reader = nullptr; }
     virtual Ref<ReadableStreamReader> createReader() = 0;
+
+    bool isLocked() const { return m_isLocked; }
+    void lock(ReadableStreamReader&);
+    void release();
+    void releaseButKeepLocked();
 
     State internalState() { return m_state; }
 
@@ -75,7 +78,28 @@ private:
     State m_state;
     Ref<ReadableStreamSource> m_source;
     ReadableStreamReader* m_reader { nullptr };
+    bool m_isLocked { false };
 };
+
+inline void ReadableStream::lock(ReadableStreamReader& reader)
+{
+    m_reader = &reader;
+    m_isLocked = true;
+}
+
+inline void ReadableStream::release()
+{
+    m_reader = nullptr;
+    m_isLocked = false;
+}
+
+inline void ReadableStream::releaseButKeepLocked()
+{
+    m_reader = nullptr;
+    m_isLocked = true;
+}
+
+
 
 }
 
